moving to new laptop

--- a/GeerWeekApp/main/res/layout/fragment_misc.xml
+++ b/GeerWeekApp/main/res/layout/fragment_misc.xml
@@ -5,12 +5,21 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Misc"
-            android:textSize="20dp"
-            android:padding="15dp"/>
-
-
+            android:id="@+id/HeadJudge0"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/HeadJudge1"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/HeadJudge2"/>
+    </LinearLayout>
 </LinearLayout>
