--- a/GeerWeekApp/main/res/layout/fragment_kidnap.xml
+++ b/GeerWeekApp/main/res/layout/fragment_kidnap.xml
@@ -6,11 +6,9 @@
               android:layout_height="match_parent">
 
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Kidnappings"
-            android:textSize="20dp"
-            android:padding="15dp"/>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/captured_list" />
 
 </LinearLayout>
